# http-query

./: .stack-all  ChangeLog.md  Makefile  README.md  http-query.cabal  simple-aeson.cabal  simple-query.cabal  stack.yaml
.github/workflows/: build.yml
src/: SimpleAeson.hs  SimpleQuery.hs
src/Network/HTTP/: Query.hs
