name:                simple-aeson
version:             0.1.0
synopsis:            Helper functions for aeson queries
description:
        Provides lookupKey functions for querying json objects.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
homepage:            https://github.com/juhp/simple-aeson
bug-reports:         https://github.com/juhp/simple-aeson/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/simple-aeson.git

library
  build-depends:       base < 5
                     , aeson
                     , text
  exposed-modules:     SimpleAeson
  hs-source-dirs:      src

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
